--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "test": "npx hardhat test",
     "lint": "prettier ./test/**/*.ts --check",
     "prepublishOnly": "yarn test",
-    "publish": "yarn publish --access public",
-    "PUBLISH": "yarn run clean && yarn run compile && yarn run publish"
+    "publishPublic": "yarn publish --access public",
+    "PUBLISH": "yarn run clean && yarn run compile && yarn run publishPublic"
   },
   "bugs": {
     "url": "https://github.com/Le-Rucher-d-Apidae/swapi-finance-contracts/issues"
