--- a/package.json
+++ b/package.json
@@ -17,12 +17,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts-3.4.1": "npm:@openzeppelin/contracts@3.4.1",
-    "@openzeppelin/contracts-5.0.2": "npm:@openzeppelin/contracts@5.0.2",
-    "@uniswap/v2-core": "^1.0.1",
-    "abi-decoder": "^2.4.0",
-    "base-58": "0.0.1"
+    "@openzeppelin/contracts-5.0.2": "npm:@openzeppelin/contracts@5.0.2"
   },
-
   "version": "0.0.7",
   "description": "Contracts for Swapi Finance 🐝",
   "main": "index.js",
@@ -41,25 +37,21 @@
   "author": "Worker bee <dev@rucherapidae@gmail.com>",
   "license": "MIT",
   "scripts": {
-
     "cleanForge": "rm -rf cache out",
     "clean:cache": "rimraf ./build/ && rimraf ./artifacts/ && rimraf ./cache/",
     "clean": "pnpm run clean:cache && pnpm run cleanForge",
     "clean:node": "rimraf ./node_modules/",
     "clean:HH": "rimraf hardhat-artifacts && rimraf hardhat-cache",
     "cleanAll": "pnpm run clean && pnpm run clean:HH  && pnpm run clean:node",
-
     "build": "forge build --skip test",
     "build:All": "forge build",
     "build:CI": "forge build --optimize --sizes --skip test",
-
     "lint": "pnpm run lint:sol:check && pnpm run prettier:check",
     "lint:sol:check": "forge fmt --check && pnpm solhint {script,src,test}/**/*.sol",
     "lint:sol:write": "forge fmt && pnpm solhint {script,src,test}/**/*.sol",
     "lint:ts": "prettier --check ./test/**/*.ts --check",
     "prettier:check": "prettier --check **/*.{json,md,yml} --ignore-path=.prettierignore",
     "prettier:write": "prettier --write **/*.{json,md,yml} --ignore-path=.prettierignore",
-
     "forge:test": "forge test",
     "hardhat:test": "hardhat test test/eth-token-recover/*",
     "hardhat:testT": "hardhat test --show-stack-traces test/eth-token-recover/*",
@@ -71,22 +63,17 @@
     "forgeTest": "forge test ",
     "test:coverage": "forge coverage",
     "test:coverage:report": "forge coverage --report lcov && genhtml lcov.info --branch-coverage --output-dir coverage",
-
     "precompile": "rimraf ./build/",
     "compile": "npx hardhat compile",
     "COMPILE": "npx hardhat compile --force",
-
     "pretest": "pnpm compile",
     "test": "npm run forgeTestAll",
     "testHH": "npm run hardhat:test",
     "testF": "npm run forge:test",
-
     "prepublishOnly": "pnpm test",
     "publishPublic": "pnpm publish --access public",
     "PUBLISH": "pnpm run clean && yarn run compile && yarn run publishPublic"
-
   },
-
   "bugs": {
     "url": "https://github.com/Le-Rucher-d-Apidae/swapi-finance-contracts/issues"
   },
