--- a/foundry.toml
+++ b/foundry.toml
@@ -5,7 +5,15 @@
   # offline = true
   # Do not include the 'solc' variable when auto_detect_solc set to true
   # forge will install version(s) required for compiling
+
+  #multiple solc versions needed: set auto_detect_solc to true
   auto_detect_solc = true
+
+  #auto_detect_solc = false
+  #multiple solc versions needed: do not set any specific version
+  #solc = "0.8.23"
+  #solc = "0.8.0"
+
   block_timestamp = 1_680_220_800 # March 31, 2023 at 00:00 GMT
   bytecode_hash = "none"
   evm_version = "paris"           # See https://www.evmdiff.com/features?name=PUSH0&kind=opcode
@@ -16,9 +24,6 @@
   optimizer_runs = 200
   out = "out"
   script = "script"
-  #multiple solc versions needed: do not set any specific version
-  #solc = "0.8.23"
-  #src = "src"
   src = "src/contracts"
   test = "test"
 
