--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "clean": "pnpm run clean:cache && pnpm run cleanForge",
     "clean:node": "rimraf ./node_modules/",
     "clean:HH": "rimraf hardhat-artifacts && rimraf hardhat-cache",
-    "clean:ALL": "pnpm run clean && pnpm run clean:HH  && pnpm run clean:node",
+    "clean:all": "pnpm run clean && pnpm run clean:HH  && pnpm run clean:node",
     "build": "forge build --skip test",
-    "build:All": "forge build",
+    "build:all": "forge build",
     "build:CI": "forge build --optimize --sizes --skip test",
     "lint": "pnpm run lint:sol:check && pnpm run prettier:check",
     "lint:sol:check": "forge fmt --check && pnpm solhint {script,src,test}/**/*.sol",
@@ -52,14 +52,15 @@
     "lint:ts": "prettier --check ./test/**/*.ts --check",
     "prettier:check": "prettier --check **/*.{json,md,yml} --ignore-path=.prettierignore",
     "prettier:write": "prettier --write **/*.{json,md,yml} --ignore-path=.prettierignore",
-    "forge:test": "forge test",
+    "prettier:write:1": "prettier --write TODO.md --ignore-path=.prettierignore",
     "hardhat:test": "hardhat test test/eth-token-recover/*",
     "hardhat:testT": "hardhat test --show-stack-traces test/eth-token-recover/*",
-    "forgeTestAll": "forge test -vv",
-    "forgeTestMyERC20": "forge test -vvv --match-path test/sampleTests/MyERC20.t.sol",
-    "forgeTestBwsErc20": "forge test -vvv --match-path test/BwsErc20.t.sol",
-    "forgeTestStakingRewards2": "forge test -vvv --match-path test/StakingRewards2.t.sol",
-    "forgeTestStakingRewards2c": "forge test -vvv --match-path test/StakingRewards2_constantReward.t.sol",
+    "forge:test": "forge test",
+    "forge:test:all": "forge test -vv",
+    "forge:test:MyERC20": "forge test -vvv --match-path test/sampleTests/MyERC20.t.sol",
+    "forge:test:BwsErc20": "forge test -vvv --match-path test/BwsErc20.t.sol",
+    "forge:test:StakingRewards2": "forge test -vvv --match-path test/StakingRewards2.t.sol",
+    "forge:test:StakingRewards2c": "forge test -vvv --match-path test/StakingRewards2_constantReward.t.sol",
     "forgeTest": "forge test ",
     "test:coverage": "forge coverage",
     "test:coverage:report": "forge coverage --report lcov && genhtml lcov.info --branch-coverage --output-dir coverage",
@@ -67,9 +68,9 @@
     "compile": "npx hardhat compile",
     "COMPILE": "npx hardhat compile --force",
     "pretest": "pnpm compile",
-    "test": "npm run forgeTestAll",
-    "testHH": "npm run hardhat:test",
-    "testF": "npm run forge:test",
+    "test": "npm run forge:test:all",
+    "test:HH": "npm run hardhat:test",
+    "test:Forge": "npm run forge:test",
     "prepublishOnly": "pnpm test",
     "publishPublic": "pnpm publish --access public",
     "PUBLISH": "pnpm run clean && pnpm run compile && pnpm run publishPublic",
