Squashed commit of the following:
commit f4a521828210cf7663b7d616c19555686db3d344
Author: BenoistP <bp_github.com@gazouille.net>
Date:   Sat May 11 17:17:30 2024 +0200

    clean, lint

commit 4191ac28e34c34f3d13b5425075e2b57a5f4ca61
Author: BenoistP <bp_github.com@gazouille.net>
Date:   Sat May 11 17:09:15 2024 +0200

    ProvidedVariableRewardTooHigh error

commit 5a3c9c8eb4aebdeb73054e560261b2fa03f9fa87
Author: BenoistP <bp_github.com@gazouille.net>
Date:   Sat May 11 16:57:08 2024 +0200

    Check emitted events

commit f05ca3237248e49c8672c8deecb8b4d2bbe3b31b
Author: BenoistP <bp_github.com@gazouille.net>
Date:   Sat May 11 16:37:27 2024 +0200

    update package scripts tests names accordingly (constant-> variable)

commit e601d0b2aeeda6bfd0ef25a4a5bb2d42d9aec668
Author: BenoistP <bp_github.com@gazouille.net>
Date:   Fri May 10 15:07:30 2024 +0200

    all tests passed

commit ccd90ee6d3e53b1f81eead38068dcbebf41a4d11
Author: BenoistP <bp_github.com@gazouille.net>
Date:   Fri May 10 15:03:48 2024 +0200

    FIX: getRewardForDuration() for VariableRewardRate ; console commented

commit 8a0973eefbaea07666c4a15b50d339106a319d5f
Author: BenoistP <bp_github.com@gazouille.net>
Date:   Fri May 10 13:37:23 2024 +0200

    constant reward renamed to variable reward rate

commit 0095e084a63e88d08051ddabf27cccd41fc7b04c
Author: BenoistP <bp_github.com@gazouille.net>
Date:   Fri May 10 13:19:09 2024 +0200

    checkRewardForDuration function must be different for constant reward

commit ffb5de86dd862bf3e1aeafcb83fb2d2c3cbbe59d
Author: BenoistP <bp_github.com@gazouille.net>
Date:   Fri May 10 12:52:22 2024 +0200

    Update StakingRewards2_constantReward.t.sol

commit 0b704bd7225573ae08a798f2725c9dd889ffd270
Author: BenoistP <bp_github.com@gazouille.net>
Date:   Fri May 10 12:30:42 2024 +0200

    renamed DuringStaking[n]WithoutWithdral to DuringStakingConstantReward[n]WithoutWithdral for constant rewards tests

commit 2e2e2933b265a3ee9a08861428c7f5b073ae98c1
Author: Benois

--- a/package.json
+++ b/package.json
@@ -60,7 +60,11 @@
     "forge:test:MyERC20": "forge test -vvv --match-path test/sampleTests/MyERC20.t.sol",
     "forge:test:BwsErc20": "forge test -vvv --match-path test/BwsErc20.t.sol",
     "forge:test:StakingRewards2": "forge test -vvv --match-path test/StakingRewards2.t.sol",
-    "forge:test:StakingRewards2c": "forge test -vvv --match-path test/StakingRewards2_constantReward.t.sol",
+    "forge:test:StakingRewards2ww": "forge test -vvv --match-path test/StakingRewards2_withWithdrawal.t.sol",
+    "forge:test:StakingRewards2wo": "forge test -vvv --match-path test/StakingRewards2_woWithdrawal.t.sol",
+    "forge:test:StakingRewards2v": "forge test -vvv --match-path test/StakingRewards2_VariableRewardRate.t.sol",
+    "forge:test:StakingRewards2vww": "forge test -vvv --match-path test/StakingRewards2_VariableRewardRate_withWithdrawal.t.sol",
+    "forge:test:StakingRewards2vwow": "forge test -vvv --match-path test/StakingRewards2_VariableRewardRate_woWithdrawal.t.sol",
     "forgeTest": "forge test ",
     "test:coverage": "forge coverage",
     "test:coverage:report": "forge coverage --report lcov && genhtml lcov.info --branch-coverage --output-dir coverage",
