Reorg test file to avoid redundant test runs

--- a/package.json
+++ b/package.json
@@ -59,10 +59,10 @@
     "forge:test:all": "forge test -vv",
     "forge:test:MyERC20": "forge test -vvv --match-path test/sampleTests/MyERC20.t.sol",
     "forge:test:BwsErc20": "forge test -vvv --match-path test/BwsErc20.t.sol",
-    "forge:test:StakingRewards2": "forge test -vvv --match-path test/StakingRewards2.t.sol",
+    "forge:test:StakingRewards2": "forge test -vvv --match-path test/StakingRewards2_baseTests.t.sol",
     "forge:test:StakingRewards2ww": "forge test -vvv --match-path test/StakingRewards2_withWithdrawal.t.sol",
     "forge:test:StakingRewards2wo": "forge test -vvv --match-path test/StakingRewards2_woWithdrawal.t.sol",
-    "forge:test:StakingRewards2v": "forge test -vvv --match-path test/StakingRewards2_VariableRewardRate.t.sol",
+    "forge:test:StakingRewards2v": "forge test -vvv --match-path test/StakingRewards2_VariableRewardRate_baseTests.t.sol",
     "forge:test:StakingRewards2vww": "forge test -vvv --match-path test/StakingRewards2_VariableRewardRate_withWithdrawal.t.sol",
     "forge:test:StakingRewards2vwow": "forge test -vvv --match-path test/StakingRewards2_VariableRewardRate_woWithdrawal.t.sol",
     "forge:test:StakingRewards2vc": "forge test -vvv --match-path test/StakingRewards2_VariableRewardRate_CustomTests.t.sol",
