--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "forge:test:BwsErc20": "forge test -vvv --match-path test/BwsErc20.t.sol",
     "forge:test:StakingRewards2": "forge test -vvv --match-path test/StakingRewards2_baseTests.t.sol",
     "forge:test:StakingRewards2base": "forge test -vvv --match-path test/StakingRewards2_commonbaseTests.t.sol",
+    "forge:test:StakingRewards2random": "forge test -vvv --match-path test/StakingRewards2_random.t.sol",
     "forge:test:StakingRewards2ww": "forge test -vvv --match-path test/StakingRewards2_withWithdrawal.t.sol",
     "forge:test:StakingRewards2wow": "forge test -vvv --match-path test/StakingRewards2_woWithdrawal.t.sol",
     "forge:test:StakingRewards2v": "forge test -vvv --match-path test/StakingRewards2_VariableRewardRate_baseTests.t.sol",
