random/fuzz tests

--- a/package.json
+++ b/package.json
@@ -60,11 +60,12 @@
     "forge:test:MyERC20": "forge test -vvv --match-path test/sampleTests/MyERC20.t.sol",
     "forge:test:BwsErc20": "forge test -vvv --match-path test/BwsErc20.t.sol",
     "forge:test:StakingRewards2": "forge test -vvv --match-path test/StakingRewards2_baseTests.t.sol",
-    "forge:test:StakingRewards2base": "forge test -vvv --match-path test/StakingRewards2_commonbaseTests.t.sol",
+    "forge:test:StakingRewards2Base": "forge test -vvv --match-path test/StakingRewards2_commonbaseTests.t.sol",
     "forge:test:StakingRewards2random": "forge test -vvv --match-path test/StakingRewards2_random.t.sol",
     "forge:test:StakingRewards2ww": "forge test -vvv --match-path test/StakingRewards2_withWithdrawal.t.sol",
     "forge:test:StakingRewards2wow": "forge test -vvv --match-path test/StakingRewards2_woWithdrawal.t.sol",
     "forge:test:StakingRewards2v": "forge test -vvv --match-path test/StakingRewards2_VariableRewardRate_baseTests.t.sol",
+    "forge:test:StakingRewards2vRandom": "forge test -vvv --match-path test/StakingRewards2_VariableRewardRate_random.sol",
     "forge:test:StakingRewards2vww": "forge test -vvv --match-path test/StakingRewards2_VariableRewardRate_withWithdrawal.t.sol",
     "forge:test:StakingRewards2vwow": "forge test -vvv --match-path test/StakingRewards2_VariableRewardRate_woWithdrawal.t.sol",
     "forge:test:StakingRewards2vc": "forge test -vvv --match-path test/StakingRewards2_VariableRewardRate_CustomTests.t.sol",
