Updates, fixes enhanced tests+ fuzzing (#5)
* Update StakingRewards2_constantReward_withWithdrawal.t.sol

* Update StakingRewards2_constantReward_woWithdrawal.t.sol

* fix: incorrect check on variableRewardMaxTotalSupply

test passed because they used already computed values which were provided both as input  and output

* Update StakingRewards2_base.t.sol

* fix: incorrect check on variableRewardMaxTotalSupply

* Update StakingRewards2_base.t.sol

* additional tests testStakingnotifyVariableRewardAmount*

* typos, parameters names, missing ";" , explicit states visibility , lint

* explicit states visibility , lint

* clean, lint

* Squashed commit of the following:

    ProvidedVariableRewardTooHigh error

    Check emitted events

    update package scripts tests names accordingly (constant-> variable)

    all tests passed

    FIX: getRewardForDuration() for VariableRewardRate ; console commented

    constant reward renamed to variable reward rate

    checkRewardForDuration function must be different for constant reward

    Update StakingRewards2_constantReward.t.sol

    renamed DuringStaking[n]WithoutWithdral to DuringStakingConstantReward[n]WithoutWithdral for constant rewards tests

    Update package.json

    comment, unused imports removed

    missing forge test

* Update StakingRewards2.sol

* tmp01

* Added logs

* DuringStakingConstantRewardn_WithoutWithdral Tests checked

* fixes

* custom test + update STAKING_START_TIME

STAKING_START_TIME must be set when notify(Variable)RewardAmount is called

* set/update STAKING_START_TIME when notifyReward is called

* Update StakingRewards2_VariableRewardRate_CustomTests.t.sol

* Update foundry.toml

* Update StakingRewards2_base.t.sol

* BUG found

* Update StakingRewards2_VariableRewardRate_CustomTests.t.sol

* uncomment all tests

* failing test removed

* stake modifiers

* useless debugLog

* DEBUG added

* debug func

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@openzeppelin/contracts-3.4.1": "npm:@openzeppelin/contracts@3.4.1",
     "@openzeppelin/contracts-5.0.2": "npm:@openzeppelin/contracts@5.0.2"
   },
-  "version": "0.8.4",
+  "version": "0.8.5",
   "description": "Contracts for Swapi Finance 🐝",
   "main": "index.js",
   "repository": {
@@ -59,8 +59,17 @@
     "forge:test:all": "forge test -vv",
     "forge:test:MyERC20": "forge test -vvv --match-path test/sampleTests/MyERC20.t.sol",
     "forge:test:BwsErc20": "forge test -vvv --match-path test/BwsErc20.t.sol",
-    "forge:test:StakingRewards2": "forge test -vvv --match-path test/StakingRewards2.t.sol",
-    "forge:test:StakingRewards2c": "forge test -vvv --match-path test/StakingRewards2_constantReward.t.sol",
+    "forge:test:StakingRewards2": "forge test -vvv --match-path test/StakingRewards2_baseTests.t.sol",
+    "forge:test:StakingRewards2Base": "forge test -vvv --match-path test/StakingRewards2_commonbaseTests.t.sol",
+    "forge:test:StakingRewards2random": "forge test -vvv --match-path test/StakingRewards2_random.t.sol",
+    "forge:test:StakingRewards2random2": "forge test -vvv --match-path test/StakingRewards2_random2.t.sol",
+    "forge:test:StakingRewards2ww": "forge test -vvv --match-path test/StakingRewards2_withWithdrawal.t.sol",
+    "forge:test:StakingRewards2wow": "forge test -vvv --match-path test/StakingRewards2_woWithdrawal.t.sol",
+    "forge:test:StakingRewards2vBase": "forge test -vvv --match-path test/StakingRewards2_VariableRewardRate_baseTests.t.sol",
+    "forge:test:StakingRewards2vRandom": "forge test -vvv --match-path test/StakingRewards2_VariableRewardRate_random.sol",
+    "forge:test:StakingRewards2vww": "forge test -vvv --match-path test/StakingRewards2_VariableRewardRate_withWithdrawal.t.sol",
+    "forge:test:StakingRewards2vwow": "forge test -vvv --match-path test/StakingRewards2_VariableRewardRate_woWithdrawal.t.sol",
+    "forge:test:StakingRewards2vc": "forge test -vvv --match-path test/StakingRewards2_VariableRewardRate_CustomTests.t.sol",
     "forgeTest": "forge test ",
     "test:coverage": "forge coverage",
     "test:coverage:report": "forge coverage --report lcov && genhtml lcov.info --branch-coverage --output-dir coverage",
