--- a/foundry.toml
+++ b/foundry.toml
@@ -14,10 +14,11 @@
   #solc = "0.8.23"
   #solc = "0.8.0"
 
-  block_timestamp = 1_680_220_800 # March 31, 2023 at 00:00 GMT
+  #block_timestamp = 1_680_220_800 # March 31, 2023 at 00:00 GMT
+  block_timestamp = 1_716_076_800 # Sun May 19 2024 00:00:00 GMT+0000
   bytecode_hash = "none"
   evm_version = "paris"           # See https://www.evmdiff.com/features?name=PUSH0&kind=opcode
-  fuzz = { runs = 1_000 }
+  fuzz = { runs = 10_000 }
   gas_reports = ["*"]
   optimizer = false
   #optimizer_runs = 10_000
@@ -50,7 +51,7 @@
   multiline_func_header = "all"
   number_underscore = "thousands"
   quote_style = "double"
-  tab_width = 4
+  tab_width = 2
   wrap_comments = true
   single_line_statement_blocks = "preserve"
   ignore = [ "test/ds-test/test.sol", "test/utils/*.sol", "src/contracts/Uniswap/v2-core/interfaces/*.sol", "src/contracts/Uniswap/v2-core/libraries/*.sol", "src/contracts/Uniswap/v2-core/*.sol", "src/contracts/Uniswap/solidity-lib/libraries/*.sol", "src/contracts/Uniswap/v2-periphery/interfaces/*.sol", "src/contracts/Uniswap/v2-periphery/*.sol", "src/contracts/Uniswap/v2-periphery/libraries/*.sol" ]
